# task-day-4

./: GEMINI.md  agent.py  app.py  pdf_text_cache.txt  pyproject.toml  requirements.txt  tools.py
.gemini/: settings.json
